# sandag-abm3-example

./: pyproject.toml
.github/workflows/: ci.yml
configs/resident/: settings.yaml  telecommute_status.csv
test/: test_sandag_abm3.py
test/regress/: final_households.csv  final_tours.csv
test/regress/hh100/: final_accessibility.csv  final_checkpoints.csv  final_disaggregate_accessibility.csv  final_land_use.csv  final_persons.csv  final_trips.csv  final_vehicles.csv
test/regress/reference-pipeline-hh100-recode.parquetpipeline/: checkpoints.parquet
test/regress/reference-pipeline-hh100-recode.parquetpipeline/accessibility/: compute_accessibility.parquet  initialize_proto_population.parquet
test/regress/reference-pipeline-hh100-recode.parquetpipeline/escort_bundles/: school_escorting.parquet
test/regress/reference-pipeline-hh100-recode.parquetpipeline/external_workplace_destination_size/: initialize_proto_population.parquet
test/regress/reference-pipeline-hh100-recode.parquetpipeline/households/: auto_ownership_simulate.parquet  av_ownership.parquet  cdap_simulate.parquet  initialize_households.parquet  joint_tour_frequency_composition.parquet  school_escorting.parquet  transponder_ownership.parquet  vehicle_type_choice.parquet  workplace_location.parquet
test/regress/reference-pipeline-hh100-recode.parquetpipeline/land_use/: initialize_landuse.parquet
test/regress/reference-pipeline-hh100.parquetpipeline/: checkpoints.parquet
tutorial/: memory_usage.ipynb  visualize_output.ipynb
(+145 files in other folders)
